# TurtleRos

./: README.md
turtlebot_active/: README.md  app.py  notes.ipynb  requirements.txt  turtleApp.sh
turtlebot_active/templates/: index.html
turtlebots/: Dockerfile  docker-compose.yaml  run.sh
turtlebots/catkin_ws/: hard_stop.sh
turtlebots/catkin_ws/src/beginner/: CMakeLists.txt  package.xml
turtlebots/catkin_ws/src/beginner/scripts/: mock.py
turtlebots/catkin_ws/src/beginner/src/: autogui.cpp  control4.cpp  controlCsch.cpp  controlCschPlus.cpp  controlCschPlusTri.cpp  coordination4.cpp  freemove.cpp  moveDest.cpp  turtlebot_controller.cpp  turtlebot_ctrl.cpp  turtlebot_ctrl.h
